forecast/sfdc/src/objects/ForecastConfigurations__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Protected</customSettingsVisibility>
    <description>All sorts of configuration settings related to Forecasting</description>
    <fields>
        <fullName>ConfigurationCategory__c</fullName>
        <label>Configuration Category</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ConfigurationValue__c</fullName>
        <label>Configuration Value</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>    
    </fields>
    <fields>
        <fullName>IsActive__c</fullName>
        <label>Is Active?</label>
        <defaultValue>true</defaultValue>
        <type>Checkbox</type>    
    </fields>
    <fields>
        <fullName>Comment__c</fullName>
        <label>Comment</label>
        <length>200</length>
        <type>Text</type>    
    </fields>
    <label>ForecastConfigurations</label>
</CustomObject>